// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainTextInput renders MainTextInput with icon 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderRadius": 30,
      "elevation": 3,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "paddingHorizontal": 12,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 5,
        "width": 5,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <RNSVGSvgView
    accessibilityRole="image"
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    fill="#000"
    focusable={false}
    height={20}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={512}
    vbWidth={512}
    width={20}
  >
    <RNSVGGroup
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <TextInput
    accessibilityRole="search"
    icon={[Function]}
    onChangeText={[MockFunction]}
    placeholderTextColor="gray"
    style={
      Array [
        Object {
          "color": "black",
          "flex": 1,
        },
        Object {
          "marginLeft": 10,
        },
      ]
    }
  />
</View>
`;

exports[`MainTextInput renders basic MainTextInput 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderRadius": 30,
      "elevation": 3,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "paddingHorizontal": 12,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 5,
        "width": 5,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <TextInput
    accessibilityRole="search"
    onChangeText={[MockFunction]}
    placeholderTextColor="gray"
    style={
      Array [
        Object {
          "color": "black",
          "flex": 1,
        },
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
</View>
`;

exports[`MainTextInput renders disabled MainTextInput 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderRadius": 30,
      "elevation": 3,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "paddingHorizontal": 12,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 5,
        "width": 5,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "marginLeft": 15,
          "marginVertical": 15,
          "paddingRight": 10,
        },
        Object {
          "color": "black",
        },
      ]
    }
  >
    test update text
  </Text>
</View>
`;

exports[`MainTextInput renders disabled MainTextInput without value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderRadius": 30,
      "elevation": 3,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "paddingHorizontal": 12,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 5,
        "width": 5,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "marginLeft": 15,
          "marginVertical": 15,
          "paddingRight": 10,
        },
        Object {
          "color": "gray",
        },
      ]
    }
  >
    
  </Text>
</View>
`;
